--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Getting Started</title>
+    <title>Hotdogs without buns</title>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
   </head>
   <body>
